Clone Firefox via a bash script
This script, as outlined, will handle copying the XPI into the appropriate testing dir(s), committing the change and running local checks to verify the extension has been added correctly.

Currently, it just gives us a shallow clone of Nightly, though eventually we should provide the ability to specify which channel(s) to test on.

Hg repo URLs:
* Nightly: https://hg.mozilla.org/mozilla-central
* Beta: https://hg.mozilla.org/releases/mozilla-beta
* Release: https://hg.mozilla.org/releases/mozilla-release

Note: As with all executables (such as bash shell scripts), executable permission must be explicitly given for the file before it can be run (i.e. `chmod +x /path/to/file`).

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -51,13 +51,15 @@ tasks:
             npm install &&
             npm run build &&
             npm run lint &&
-            npm run package
+            npm run package &&
+            /repo/bin/commit_xpi.sh
       metadata:
         name: "Firefox Experiments GitHub Tests"
         description: "All tests"
         owner: ${event.pull_request.user.login}@users.noreply.github.com
         source: ${event.repository.url}
   # When a commit is pushed to master, perform this task
+  # Note: Currently this is wrongly showing a status on PR pushes in GitHub (Bug 1514914)
   # If a branch is merged without being updated first, the tests could pass on the branch
   # but not when things are merged into master.
   - $if: 'tasks_for == "github-push"'
@@ -91,7 +93,8 @@ tasks:
               npm install &&
               npm run build &&
               npm run lint &&
-              npm run package
+              npm run package &&
+              /repo/bin/commit_xpi.sh
         metadata:
           name: "Firefox Experiments GitHub Tests"
           description: "All tests"
