Incorporate rhelmer's feedback
Added mozilla eslint, though mochitest specific globals (e.g. 'add_task', 'ok', 'is') are not included in that, so I explicitly added them as globals in the .eslintrc.json file. I will file a follow-up issue to check if there's a mochitest plugin later.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,16 @@
 {
-  "extends": "airbnb-base",
+  "extends": [
+    "airbnb-base",
+    "plugin:mozilla/recommended"
+  ],
   "env": {
     "webextensions": true,
     "browser": true
+  },
+  "globals": {
+    "add_task": true,
+    "is": true,
+    "ok": true
   },
   "rules": {
     "object-curly-newline": ["error", {"consistent": true}],
