Fix #8: Run custom mochitest locally and on Try server
Runs the custom mochitest, `browser_experiment_installed_check.js`, which simply checks if the add-on is installed in Firefox.

It is possible to do this thanks to Bug 1517083, which just landed, which has the build system look in a new ./testing/extensions/ directory for tests to run.

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -82,7 +82,7 @@ tasks:
               /repo/bin/configure_ssh.sh &&
               node /repo/bin/get_secret.js &&
               cd mozilla-central &&
-              ./mach try -p linux64 -u all -t none --artifact
+              ./mach try -b o -p linux64 testing/extensions --artifact
         metadata:
           name: "Firefox Experiments GitHub Tests"
           description: "All tests"
