--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-mozilla": "1.0.3",
-    "eslint-plugin-no-unsanitized": "^3.0.2",
+    "eslint-plugin-no-unsanitized": "3.0.2",
     "generate-json-webpack-plugin": "0.3.1",
-    "taskcluster-client": "12.2.0",
-    "web-ext": "2.9.2",
+    "taskcluster-client": "13.0.0",
+    "web-ext": "3.0.0",
     "webpack": "4.27.1",
     "webpack-cli": "3.1.2"
   }
